force-app/main/default/objects/Exl_Restriction_Tracked_Data__mdt/Exl_Restriction_Tracked_Data__mdt.object-meta.xml
<CustomObject>
    <description>Used for PoP Restrictions, reconciliation Process.</description>
    <label>Restriction Tracked Data</label>
    <pluralLabel>Restriction Tracked Data</pluralLabel>
</CustomObject>