force-app/main/default/objects/Exl_Restriction_Tracked_Data__mdt/fields/Expected_Value__c.field-meta.xml
<CustomField>
    <fullName>Expected_Value__c</fullName>
    <label>Expected Value</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>