force-app/main/default/objects/Exl_Restriction_Tracked_Data__mdt/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <label>Frequency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>API-driven</fullName>
                <default>true</default>
                <label>API-driven</label>
            </value>
            <value>
                <fullName>Real-Time</fullName>
            </value>
            <value>
                <fullName>6 Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>