force-app/main/default/objects/Exl_Restriction_Tracked_Data__mdt/fields/Measurement_Source__c.field-meta.xml
<CustomField>
    <fullName>Measurement_Source__c</fullName>
    <label>Measurement Source</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Synkros</fullName>
                <default>true</default>
                <label>Synkros</label>
            </value>
            <value>
                <fullName>MDM</fullName>
            </value>
            <value>
                <fullName>ACE</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>PingOne</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>