force-app/main/default/objects/Exl_Restriction_Tracked_Data__mdt/fields/Restriction_Category__c.field-meta.xml
<CustomField>
    <fullName>Restriction_Category__c</fullName>
    <label>Restriction Category</label>
    <referenceTo>Exl_Restriction_Category__mdt</referenceTo>
    <relationshipLabel>Restriction Tracked Data</relationshipLabel>
    <relationshipName>Restriction_Tracked_Data</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>