force-app/main/default/objects/Exl_Restriction_Tracked_Data__mdt/fields/Restriction_Type__c.field-meta.xml
<CustomField>
    <fullName>Restriction_Type__c</fullName>
    <label>Restriction Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>