force-app/main/default/objects/Exl_Restriction_Tracked_Data__mdt/fields/Tracked_Field__c.field-meta.xml
<CustomField>
    <fullName>Tracked_Field__c</fullName>
    <description>Field API Name</description>
    <label>Tracked Field</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>