force-app/main/default/objects/Exl_Restriction_Tracked_Data__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Restriction_Type__c</columns>
    <columns>Tracked_Field__c</columns>
    <columns>Object__c</columns>
    <columns>Expected_Value__c</columns>
    <columns>Measurement_Source__c</columns>
    <columns>Frequency__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>